2004-08-29	Florian Boor  	<florian.boor@kernelconcepts.de>

	* Released V 0.1.17
	* network.c: Fixed some labels, set button defaults, dialog size.
	* Makefile: Some minor fixes.
	* cfgfile.c: Fixed broken initialisation.
	* applets.c: Removed obsolete definition.
	* users/interface.c: Implemented password changing.
	        callbacks.c
			
2004-08-29	Florian Boor  	<florian.boor@kernelconcepts.de>
	
	* Makefile: Version update.
	* theme.c: Changed some spellings from AE to BE.
	* main.c, main-info.c: Set default button.
	* users/*: Added password change dialog, changed default settings.
	           (not finished)

2004-08-25	Ole Reinhardt   <ole.reinhardt@kernelconcepts.de>
	* network.c: Support for Wireless LAN devices, automatically WiFi detection,
	             improved automaticaly device detection (add device command)
	* cfgfile.*: Support for Wireless LAN devices. Writes and reads the following
		     parameters in /etc/network/interfaces:
		     
		     - wireless_essid 
		     - wireless_mode
		     - wireless_channel
		     - wireless_key

2004-08-24	Florian Boor  	<florian.boor@kernelconcepts.de>

	* theme.c: Fixed background image setup for pathes that need shell escapes.

2004-08-23	Florian Boor  	<florian.boor@kernelconcepts.de>

	* timeanddate.c: Read current TZ from file instead of environment.
	* battery.c: Several improvements in APM stuff like correct handling 
	             of units and improved bar setup.

2004-08-20	Florian Boor  	<florian.boor@kernelconcepts.de>

	* Released Version 0.1.16
	* Global changes (gpe-info): All applets need to make sure their widgats are 
	                             visible. We support applets that may want to 
								 hide some of them.
	* battery.c: Changed default visibility of widgets for second battery.
	* main-info.c, sysinfo.c: Changes how widgets are shown.

2004-08-19	Florian Boor  	<florian.boor@kernelconcepts.de>

	* timeanddate.c: Fixed bug causing date not set if changed in combo.
